# word-frequency

./: PSExtractTexts.Tests.ps1  PSExtractTexts.psm1  README.md  process-files.ps1
.github/workflows/: cd.yml
cscd/: abh01a.att0.excluded.txt  abh01a.att0.included.txt  abh01a.att0.xml.excluded.txt  abh01a.att0.xml.included.txt  abh01a.att0.xml.original.txt  abh01a.att0.xml.wf.csv  abh01a.att1.excluded.txt  abh01a.att2.excluded.txt  abh01a.att2.included.txt  abh01a.att2.xml.excluded.txt  abh01a.att2.xml.included.txt  abh01a.att2.xml.original.txt  abh01a.att2.xml.wf.csv  abh01a.att3.excluded.txt  abh01a.att3.included.txt  abh01a.att3.xml.excluded.txt  abh01a.att3.xml.included.txt  abh01a.att3.xml.txt  abh01a.att3.xml.wf.csv  abh01a.att4.excluded.txt  abh01a.att4.included.txt  abh01a.att4.xml.excluded.txt  abh01a.att4.xml.included.txt  abh01a.att4.xml.txt  abh01a.att4.xml.wf.csv  abh01a.att5.excluded.txt  abh01a.att5.included.txt  abh01a.att5.xml.excluded.txt  abh01a.att5.xml.included.txt  abh01a.att5.xml.txt  abh01a.att5.xml.wf.csv  abh01a.att6.excluded.txt  abh01a.att6.included.txt  abh01a.att6.xml.excluded.txt  abh01a.att6.xml.included.txt  abh01a.att6.xml.txt  abh01a.att6.xml.wf.csv  abh01a.att7.excluded.txt  abh01a.att7.included.txt  abh01a.att7.xml.excluded.txt  (+15978 more)
wf-tools/: Cargo.toml
wf-tools/src/: main.rs
wf-tools/test/: run-test.ps1  selected-nodes.txt  selected-nodes.txt.wf-baseline.csv
wf-tools/test/cscd/: node1.xml.wf.csv  node2.xml.wf.csv  node3.xml.wf.csv
